# sigflow

./: LICENSE  __init__.py  __main__.py  app.py  bridge.py  graph.py  metrics.py  node.py  nodes.py  pyproject.toml  reader.py  recorder.py  registry.py  runtime.py  timeline.py  types.py  window.py  xdf_writer.py
biomech/: model.py  solver.py
docs/papers/: T1_sigflow_joss.md
nodes/: __init__.py  _glb_mesh.py  app_display.py  audio_playback.py  audio_source.py  biomech_tongue_display.py  canvas_display.py  crop.py  cv2_display.py  dlc_inference.py  elicitation_events.py  elicitation_markers.py  elicitation_results.py  face_mesh.py  face_roi.py  flip.py  keypoints_overlay.py  llm_inference.py  mesh_overlay.py  phoneme_recognizer.py  plot_display.py  roi_crop.py  scrcpy_camera.py  scrcpy_mic.py  scrcpy_screen.py  sonostar_source.py  spectrogram.py  tongue_model_display.py  tts_synthesis.py  webcam_source.py
src/sigflow/: __init__.py  metrics.py  onnx_providers.py  paths.py  reader.py  recorder.py  runtime.py  types.py
src/sigflow/biomech/: __init__.py  _myosim_reference.py  forward_solver.py  gno_model.py  inverse.py  mesh.py  s3d_parser.py  types.py  vertex_inverse.py
src/sigflow/nodes/: __init__.py  _glb_mesh.py  _scrcpy.py  app_display.py  audio_playback.py  audio_source.py  biomech_tongue_display.py  canvas_display.py  crop.py  (+16 more)
src/sigflow_editor/: __init__.py  app.py  nodes.py  timeline.py  window.py
tests/: test_forward_solver_symmetry.py  test_forward_solver_vectorized.py  test_myosim_parity.py  test_tongue_constraints.py  test_tongue_skinning_parity.py
