[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "sigflow"
description = "Reactive DAG pipeline framework for real-time signal processing"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
recording = ["pylsl", "pyxdf", "imageio-ffmpeg"]
audio = ["sounddevice", "scipy"]
video = ["opencv-python"]
vision     = ["opencv-python", "mediapipe>=0.10.32"]
onnx       = ["onnxruntime-gpu>=1.24.1"]
tts        = ["kokoro-onnx>=0.4"]
biomech    = ["scipy>=1.11"]
scrcpy     = []
sonostar   = []
all = ["sigflow[recording,audio,video,vision,onnx,tts,biomech]"]
dev = ["ruff", "pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 99
